syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  LedgerState state = 1;
  VectorClock replicaTS = 2;
}

message PropagateStateResponse {}

message PropagateStatePullRequest {
  Address address = 1;
}

message PropagateStatePullResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc propagateStatePull(PropagateStatePullRequest) returns (PropagateStatePullResponse);
}
